@@ -5,6 +5,7 @@ lintian-brush (0.36) UNRELEASED; urgency=medium
   * Support parsing some more format salsa URLs.
   * Add pkg-sugar, pkg-phototools, pkg-netmeasure, pkg-hamradio, pkg-sass
     alias.
+  * Ignore broken package.xml files.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 12 Oct 2019 20:27:32 +0000
 
